implemented views and various fixes

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -2,21 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "$LOLOMG=X: possibly delisted; no price data found  (period=1y) (Yahoo error = \"No data found, symbol may be delisted\")\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "1.042209506034851\n"
      ]
     }
    ],
@@ -27,7 +20,7 @@
     "data = ticker.fast_info\n",
     "price = data['last_price']\n",
     "try:\n",
-    "    price = Ticker(\"LOLOMG=X\").fast_info['last_price']\n",
+    "    price = Ticker(\"EURUSD=X\").fast_info['last_price']\n",
     "except KeyError:\n",
     "    price = 0\n",
     "print(price)\n"
